# libproxsuite

./: .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  flake.nix  pyproject.toml
.github/workflows/: ci-arch.yml  ci-linux-osx-win-conda.yml  ci-linux-ros.yml  gh-pages.yml  nix.yml  release-linux.yml  release-osx-win.yml  release.yml  update-flake-lock.yml
bindings/python/: CMakeLists.txt
bindings/python/proxsuite/: __init__.py
include/proxsuite/linalg/veg/: tuple.hpp
include/proxsuite/linalg/veg/internal/: dyn_index.hpp  fix_index.hpp  macros.hpp
test/doctest/: doctest.hpp
test/src/: sparse_maros_meszaros.cpp
